spacing fixed

--- a/src/App.css
+++ b/src/App.css
@@ -29,24 +29,17 @@
   right: 0;
   background: teal;
   height: 60px;
-  display: flex;
-  align-items: center;
   padding-top: 20px;
   color: white;
-}
-
-.fixed-top p{
   display: flex;
-  justify-content: space-evenly;
-  margin-left: 100px;
-  margin-right: 100px;
+  justify-content: space-around;
 }
 
 @media only screen and (max-width: 600px){
   .fixed-top{
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  align-items: center;
   height: 125px;
   padding-left: 10px;
 }
